; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_debug.c_debug_log_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_debug.c_debug_log_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@panic_info = common dso_local global i32 0, align 4
@DEBUG_BUF_SIZE = common dso_local global i32 0, align 4
@debug_buf_base = common dso_local global i8* null, align 8
@debug_buf_ptr = common dso_local global i8* null, align 8
@debug_buf_size = common dso_local global i64 0, align 8
@gPanicBase = common dso_local global i64 0, align 8
@gPanicSize = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @debug_log_init() #0 {
  %1 = load i32, i32* @panic_info, align 4
  %2 = load i32, i32* @DEBUG_BUF_SIZE, align 4
  %3 = call i32 @bzero(i32 %1, i32 %2)
  %4 = load i8*, i8** @debug_buf_base, align 8
  %5 = icmp ne i8* %4, null
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert(i32 %6)
  %8 = load i8*, i8** @debug_buf_ptr, align 8
  %9 = icmp ne i8* %8, null
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load i64, i64* @debug_buf_size, align 8
  %13 = icmp ne i64 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  ret void
}

declare dso_local i32 @bzero(i32, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
